tests/test-app.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: test-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: test-app

  template:
    metadata:
      labels:
        app: test-app

    spec:
      containers:
        - name: web
          image: nginx:stable

          ports:
            - containerPort: 80
