tests/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: test-app

spec:
  ingressClassName: traefik

  rules:
    - host: kuma.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: test-app
                port:
                  number: 80
