tests/test-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: test-app

spec:
  selector:
    app: test-app

  ports:
    - port: 80
      targetPort: 80
